--- a/FileManager/FileManager/FileManager.csproj
+++ b/FileManager/FileManager/FileManager.csproj
@@ -33,6 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -63,14 +64,21 @@
     <Compile Include="Forms\DeleteForms.Designer.cs">
       <DependentUpon>DeleteForms.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Rename.cs">
+    <Compile Include="Forms\RenameForms.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Rename.Designer.cs">
-      <DependentUpon>Rename.cs</DependentUpon>
+    <Compile Include="Forms\RenameForms.Designer.cs">
+      <DependentUpon>RenameForms.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\RenameFileForms.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\RenameFileForms.Designer.cs">
+      <DependentUpon>RenameFileForms.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Renames\Rename.cs" />
     <Compile Include="Transitions\FolderWalking.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -78,8 +86,11 @@
     <EmbeddedResource Include="Forms\DeleteForms.resx">
       <DependentUpon>DeleteForms.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\Rename.resx">
-      <DependentUpon>Rename.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\RenameForms.resx">
+      <DependentUpon>RenameForms.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\RenameFileForms.resx">
+      <DependentUpon>RenameFileForms.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
