--- a/FileManager/FileManager/FileManager.csproj
+++ b/FileManager/FileManager/FileManager.csproj
@@ -58,6 +58,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\CreateForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\CreateForm.Designer.cs">
+      <DependentUpon>CreateForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\DeleteForms.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -79,9 +85,14 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Renames\Rename.cs" />
+    <Compile Include="Transferals\Transferal.cs" />
     <Compile Include="Transitions\FolderWalking.cs" />
+    <Compile Include="Сreates\Create.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\CreateForm.resx">
+      <DependentUpon>CreateForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\DeleteForms.resx">
       <DependentUpon>DeleteForms.cs</DependentUpon>
