--- a/FileManager/FileManager/FileManager.csproj
+++ b/FileManager/FileManager/FileManager.csproj
@@ -52,23 +52,42 @@
     <Compile Include="DelereForms.cs" />
     <Compile Include="Deletes\Delete.cs" />
     <Compile Include="Display\DisplayAssistant.cs" />
+    <Compile Include="FileSearchs\FileSearch.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\CreateForm.cs">
+    <Compile Include="Forms\CreateForms.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\CreateForm.Designer.cs">
-      <DependentUpon>CreateForm.cs</DependentUpon>
+    <Compile Include="Forms\CreateForms.Designer.cs">
+      <DependentUpon>CreateForms.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\DeleteForms.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\DeleteForms.Designer.cs">
       <DependentUpon>DeleteForms.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\DetailForms.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\DetailForms.Designer.cs">
+      <DependentUpon>DetailForms.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FileSearchForms.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FileSearchForms.Designer.cs">
+      <DependentUpon>FileSearchForms.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\InfoForms.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\InfoForms.Designer.cs">
+      <DependentUpon>InfoForms.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\RenameForms.cs">
       <SubType>Form</SubType>
@@ -82,6 +101,9 @@
     <Compile Include="Forms\RenameFileForms.Designer.cs">
       <DependentUpon>RenameFileForms.cs</DependentUpon>
     </Compile>
+    <Compile Include="Information\DetailInfo.cs" />
+    <Compile Include="Information\Info.cs" />
+    <Compile Include="Information\ScannerFile.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Renames\Rename.cs" />
@@ -91,11 +113,20 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\CreateForm.resx">
-      <DependentUpon>CreateForm.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\CreateForms.resx">
+      <DependentUpon>CreateForms.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\DeleteForms.resx">
       <DependentUpon>DeleteForms.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\DetailForms.resx">
+      <DependentUpon>DetailForms.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FileSearchForms.resx">
+      <DependentUpon>FileSearchForms.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\InfoForms.resx">
+      <DependentUpon>InfoForms.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\RenameForms.resx">
       <DependentUpon>RenameForms.cs</DependentUpon>
